--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="landing-page">
   <app-root></app-root>
+</div>
 </body>
 </html>
